--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,8 @@ repositories {
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
     compile group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '3.141.59'
+    compile 'org.jsoup:jsoup:1.13.1'
+    implementation 'com.google.code.gson:gson:2.8.6'
 }
 
 compileKotlin {
